--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/VivianEun/Weather_Project">Open-source code</a>
+    <p>by Vivian Eun</p>
     <script src="src/index.js"></script>
   </body>
 </html>
