--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/VivianEun/Weather_Project">Open-source code</a>
-    <p>by Vivian Eun</p>
+    <a href="https://github.com/VivianEun/Weather_Project" id="github"
+      >Open-source code by Vivian Eun</a
+    >
+
     <script src="src/index.js"></script>
   </body>
 </html>
